# ReadingMVP

./: .gitattributes  .gitignore  2026-06-09_230433-overseas-chinese-reading-app-mvp.md  AGENTS.md  CHANGELOG.md  README.md
.agents/agents/: code-reviewer.md  content-safety-reviewer.md  kmp-architect.md  pinyin-annotator.md  privacy-compliance.md  product-manager.md  release-manager.md  seed-user-recruiter.md  source-scout.md  story-rewriter.md  vocab-extractor.md
.agents/shared/: ai-explain-backend.md  analytics-instrumenter.md  cover-art-prompter.md  data-analyst.md  feedback-intake.md  pinyin-annotator.md  quiz-author.md  signing-setup.md  store-listing-writer.md  story-qa-validator.md  test-author.md  ui-designer.md
.claude/agents/: ai-explain-backend.md  analytics-instrumenter.md  code-reviewer.md  content-safety-reviewer.md  cover-art-prompter.md  data-analyst.md  feedback-intake.md  kmp-architect.md  pinyin-annotator.md  privacy-compliance.md  product-manager.md  quiz-author.md  release-manager.md  seed-user-recruiter.md  signing-setup.md  source-scout.md  store-listing-writer.md  story-qa-validator.md  story-rewriter.md  test-author.md  ui-designer.md  vocab-extractor.md
.codex/agents/: ai-explain-backend.toml  analytics-instrumenter.toml  code-reviewer.toml  content-safety-reviewer.toml  cover-art-prompter.toml  data-analyst.toml  feedback-intake.toml  kmp-architect.toml  pinyin-annotator.toml  privacy-compliance.toml  product-manager.toml  quiz-author.toml  release-manager.toml  seed-user-recruiter.toml  signing-setup.toml  source-scout.toml  store-listing-writer.toml  story-qa-validator.toml  story-rewriter.toml  test-author.toml  ui-designer.toml  vocab-extractor.toml
docs/: tts-audio-plan.md
pipeline/: pyproject.toml  requirements-qwen.txt  requirements.txt  source_catalog.py
pipeline/scraper/: __init__.py  __main__.py  scrape.py
pipeline/sfx/: README.md  generate_sfx.py
pipeline/tests/: test_transformer.py  test_validator.py
pipeline/transformer/: __init__.py  audio.py  generate.py  polyphone_overrides.py  story_data.py
pipeline/validator/: __init__.py  __main__.py  validate.py
pipeline/verify/: asr_check.py  test_asr_check.py
release/: RELEASE.md  checklist-android.md  checklist-ios.md  version.json
server/: requirements.txt
(+301 files in other folders)
