[project]
name = "little-mandarin-content-pipeline"
version = "0.1.0"
description = "Content scraping, transformation, and validation tools for Little Mandarin Classics."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "jsonschema>=4.23.0",
    "pypinyin>=0.51.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]
# Local open-source TTS + forced alignment (LMC_TTS_PROVIDER=qwen).
# Heavy model weights; only needed for real audio generation, not mock/validation.
# NOTE: latest qwen-asr is 0.0.6 (no 0.1.x). On Intel macOS torch ships no wheel
# past 2.2.2 (CPython 3.8-3.12 only) -> use Python 3.12 + torch==2.2.2 there.
# See requirements-qwen.txt for the full platform note and transformers pin clash.
qwen = [
    "qwen-tts>=0.1.1",
    "qwen-asr>=0.0.6",
    "torch>=2.2.0",
    "soundfile>=0.12.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
